--- a/client/style.css
+++ b/client/style.css
@@ -13,12 +13,12 @@ html {
   align-items: center;
   background-size: cover;
   background-position: center;
-  flex: 1 0 auto;
+  flex: 1;
   justify-content: center;
 }
 
-.pic1 { background-image:url(../pics/pic1.jpg) }
-.pic2 { background-image:url(../pics/pic2.jpg) }
-.pic3 { background-image:url(../pics/pic3.jpg) }
-.pic4 { background-image:url(../pics/pic4.jpg) }
-.pic5 { background-image:url(../pics/pic5.jpg) }
+.pic1 { background-image: url("https:source.unsplash.com/-98y5HIFDs8/1500x1500") }
+.pic2 { background-image: url('https://source.unsplash.com/UzHQOxVxqgw/1500x1500') }
+.pic3 { background-image: url('https://source.unsplash.com/g_gwdpsCVAY/700x700') }
+.pic4 { background-image: url('https://source.unsplash.com/cssvEZacHvQ/1500x1500') }
+.pic5 { background-image: url('https://source.unsplash.com/Ygum7h8N4Wk/1500x1500') }
